Solve edit achievment